// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/LabelWithHelp (intern) Defaults play-test 1`] = `
<div data-test-block="true">
  <label id="labelId-:r2:"
         class="_label_348na_5"
  >
    Ledetekst
  </label>
</div>
`;

exports[`Tester/LabelWithHelp (intern) WithAttributes play-test 1`] = `
<div data-test-block="true">
  <label id="htmlid"
         data-testid="123ID"
         class="_label_348na_5   dummyClassname"
         lang="nb"
  >
    Ledetekst
  </label>
</div>
`;

exports[`Tester/LabelWithHelp (intern) WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <label id="labelId-:rd:"
         class="_label_348na_5    dummyClassname"
  >
    Ledetekst
  </label>
  <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_sf6vs_27"
          data-brightness="default"
          type="button"
          aria-describedby="labelId-:rd:"
          aria-expanded="true"
  >
    <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:re:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:re:">
        Hjelp
      </title>
      <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
      </path>
    </svg>
  </button>
  <div class="_helpBox_sf6vs_32  dummyClassname dummyClassname">
    <div class="_helpBoxText_sf6vs_45">
      hjelp
    </div>
    <button class="_button_19ayz_1 _button_small_19ayz_38  _helpBoxCloseButton_sf6vs_52"
            data-brightness="default"
            type="button"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rf:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rf:">
          Lukk
        </title>
        <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
        </path>
      </svg>
    </button>
  </div>
  <div class="_description_sf6vs_17 _descriptionMarginTop_sf6vs_23  dummyClassname">
    beskrivelse
  </div>
</div>
`;

exports[`Tester/LabelWithHelp (intern) WithDescription play-test 1`] = `
<div data-test-block="true">
  <label id="labelId-:r3:"
         class="_label_348na_5"
  >
    Ledetekst
  </label>
  <div class="_description_sf6vs_17">
    Kort hjelpetekst
  </div>
</div>
`;

exports[`Tester/LabelWithHelp (intern) WithHelpTextSvgPathAndTitle play-test 1`] = `
<div data-test-block="true">
  <label id="labelId-:r7:"
         class="_label_348na_5"
  >
    Ledetekst
  </label>
  <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_sf6vs_27"
          data-brightness="default"
          type="button"
          aria-describedby="labelId-:r7:"
          aria-expanded="false"
  >
    <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r8:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r8:">
        Tooltip
      </title>
      <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/LabelWithHelp (intern) WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <label id="labelId-:rb:"
         class="_label_348na_5"
  >
    Ledetekst
  </label>
  <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_sf6vs_27"
          data-brightness="default"
          type="button"
          aria-describedby="labelId-:rb:"
          aria-expanded="false"
  >
    <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:rc:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:rc:">
        Hjelp
      </title>
      <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/LabelWithHelp (intern) WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <label id="labelId-:r5:"
         class="_label_348na_5  _srOnly_348na_18"
  >
    Ledetekst
  </label>
  <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_sf6vs_27 _srOnly_sf6vs_60"
          data-brightness="default"
          type="button"
          aria-describedby="labelId-:r5:"
          aria-expanded="false"
  >
    <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r6:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r6:">
        Hjelp
      </title>
      <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
      </path>
    </svg>
  </button>
  <div class="_description_sf6vs_17  _srOnly_sf6vs_60">
    Kort hjelpetekst
  </div>
</div>
`;

exports[`Tester/LabelWithHelp (intern) WithLongChildren smoke-test 1`] = `
<div data-test-block="true">
  <label id="labelId-:ra:"
         class="_label_348na_5"
  >
    Loremipsumdolorsitamet.Allesomharlagetennettside,trengtlittfylltekstellerbaresurfetrundtpånettetharantageligvissettdisseordene,etterfulgtaventilsynelatendeeviglangtekstfyltmedlatinskeliksomsetninger.
  </label>
</div>
`;

exports[`Tester/LabelWithHelp (intern) WithRef play-test 1`] = `
<div data-test-block="true">
  <label id="dummyIdForwardedFromRef"
         class="_label_348na_5"
  >
    Ledetekst
  </label>
</div>
`;

exports[`Tester/LabelWithHelp (intern) WithShowRequiredMark smoke-test 1`] = `
<div data-test-block="true">
  <label id="labelId-:r4:"
         class="_label_348na_5 _label_required_348na_12"
  >
    Ledetekst
  </label>
</div>
`;
